kubernetes/security/authelia/authelia.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: security
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb
        # args: ["--transaction-isolation=READ-COMMITTED", "--binlog-format=ROW", "--log-bin=mysqld-bin"]
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: mariadb
  namespace: security
spec:
  ports:
  - name: db
    port: 3306
  selector:
    app: mariadb
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: security
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: security
spec:
  ports:
  - name: cache
    port: 6379
  selector:
    app: redis
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: security
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/authelia
      volumes:
        - name: config-volume
          configMap:
            name: authelia-config
            items:
              - key: configuration.yml
                path: configuration.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: security
spec:
  selector:
    app: authelia
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: autheliaingress
  namespace: security
spec:
  rules:
  - host: authelia.bas
    http:
      paths:
      - backend:
          serviceName: authelia
          servicePort: 80
  # tls:
  # - hosts:
  #   - openldap.bas


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: security
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: test
  template:
    metadata:
      labels:
        task: security
        k8s-app: test
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - linux-wayne
      containers:
      - name: nginx
        ports:
        - containerPort: 80
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: test
  name: test
  namespace: security
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    k8s-app: test


---

# Forward authentication to authserver.com
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: security
spec:
  forwardAuth:
    address: http://authelia.security:80/api/verify?rd=http://authelia.bas/

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test
  namespace: security
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`test.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: test
      port: 80
    middlewares:
    - name: authelia
